--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 You're using now LTUR Crawler to find 25 EUR offers
 developed by Hoang Anh Le [me@lehoanganh.de]
-After finding a offer, LTUR will send an email to you via GMail
+After finding an offer, LTUR will send an email to you via GMail
 Therefore, you have to input your email in order to become the message from LTUR Crawler
 Version 0.1
